[package]
name = "qqhistory"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
reqwest = { version = "0.11", features = ["json", "cookies"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
base64 = "0.21"
colored = "2.1"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
chrono = "0.4"
